kubernetes/watch-backend/kafka.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kafka
  namespace: watch-backend
spec:
  selector:
    matchLabels:
        app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: debezium/kafka
          ports:
            - containerPort: 9092
              name: kafka-port
            - containerPort: 9093
              name: controller-port
          securityContext:
            runAsUser: 0
            privileged: true
          resources:
              requests:
                memory: "400Mi"
          volumeMounts:
            - name: kafka-data
              mountPath: /kafka/data
      volumes:
        - name: kafka-data
          hostPath:
            path: /shared-data/persist/kafka
            type: DirectoryOrCreate

---
# service
#
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: watch-backend
spec:
  selector:
    app: kafka
  ports:
    - port: 9092
      name: kafka-port
    - port: 9093
      name: controller-port
