kubernetes/watch-backend/postgres.yaml
# Postgres deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      nodeName: "montalcino-master-vm"
      containers:
        - name: pg-server
          image: postgres:alpine
          imagePullPolicy: 'IfNotPresent'
          ports:
            - containerPort: 5432
          resources:
            requests:
              memory: "200Mi"
          #     cpu: "500m"
      #     volumeMounts:
      #       - mountPath: /var/lib/postgresql/data
      #         name: postgresdb
      # volumes:
      #   - name: postgresdb
      #     hostPath:
      #       path: /shared-data/persist/postgres
      #       type: DirectoryOrCreate
---

# service
#
apiVersion: v1
kind: Service
metadata:
  name: pg-server
  namespace: watch-backend
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
