kubernetes/watch-backend/watch-api-micro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-api-micro
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch-api-micro
  template:
    metadata:
      labels:
        app: watch-api-micro
    spec:
      volumes:
        - name: nginx-config
          hostPath:
            path: /shared-data/configs/nginx-micro
            type: Directory
        - name: nginx-log
          hostPath:
            path: /shared-data/persist/nginx-micro/log
            type: DirectoryOrCreate
        - name: nginx-static
          hostPath:
            path: /shared-data/persist/wwwroot
            type: Directory
      containers:

        - name: nginx
          image: nginx:alpine
          ports: 
            - containerPort: 88
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-log
              mountPath: /var/log/nginx
            - name: nginx-static
              mountPath: /var/www/html
          resources:
            requests:
              memory: "50Mi"

        - name: watch-api
          image: ilaverlin/watchcluster-api:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "100Mi"
---

# Service
#
apiVersion: v1
kind: Service
metadata:
  name: watch-api-micro
  namespace: watch-backend
spec:
  selector:
    app: watch-api-micro
  ports:
    - port: 88


---
# location handler
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: location-service
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: location-service
  template:
    metadata:
      labels:
        app: location-service
    spec:
      containers:
        - name: location-service
          image: ilaverlin/watchcluster-servicehost:latest
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: "100Mi"

---
# weather handler
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-service
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-service
  template:
    metadata:
      labels:
        app: weather-service
    spec:
      containers:
        - name: weather-service
          image: ilaverlin/watchcluster-servicehost:latest
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: "100Mi" 

---
# exchange handler
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-service
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange-service
  template:
    metadata:
      labels:
        app: exchange-service
    spec:
      containers:
        - name: exchange-service
          image: ilaverlin/watchcluster-servicehost:latest
          imagePullPolicy: 'Always'
          resources:
            requests:
              memory: "100Mi"

---
# Database sink
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-sink
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-sink
  template:
    metadata:
      labels:
        app: db-sink
    spec:
      containers:
        - name: db-sink
          image: ilaverlin/watchcluster-dbsink:latest
          imagePullPolicy: 'Always'
          resources:
           requests:
              memory: "50Mi"
