kubernetes/watch-backend/watch-api-mono.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: watch-api-mono
  namespace: watch-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: watch-api-mono
  template:
    metadata:
      labels:
        app: watch-api-mono
    spec:
      volumes:
        - name: nginx-config
          hostPath:
            path: /shared-data/configs/nginx-mono
            type: Directory
        - name: nginx-log
          hostPath:
            path: /shared-data/persist/nginx-mono/log
            type: DirectoryOrCreate
        - name: nginx-static
          hostPath:
            path: /shared-data/persist/wwwroot
            type: Directory
      containers:

        - name: nginx
          image: nginx:alpine
          ports: 
            - containerPort: 88
          # env:
          #   - name: NGINX_ENVSUBST_TEMPLATE_DIR
          #     value: /etc/nginx/conf.d
          #   - name: WS_HOST_NAME
          #     value: watch-api-mono
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: nginx-log
              mountPath: /var/log/nginx
            - name: nginx-static
              mountPath: /var/www/html
          resources:
            limits:
              memory: "50Mi"

        - name: watch-server
          image: ilaverlin/watch-server:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "100Mi"
---

# Service
#
apiVersion: v1
kind: Service
metadata:
  name: watch-api-mono
  namespace: watch-backend
spec:
  selector:
    app: watch-api-mono
  ports:
    - port: 88
---

# Middleware
#
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mono-redirect
  namespace: watch-backend
spec:
 replacePathRegex:
    regex: ^/mono/(.*)
    replacement: /$1
---

# Route
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: watch-api-mono
  namespace: watch-backend
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/mono`)
    kind: Rule
    middlewares:
    - name: mono-redirect    
    services:
    - name: watch-api-mono
      port: 88
  tls:
    certResolver: lencrypt
