kubernetes/watch-backend/watch-api-routing-template.yaml

#####################################
## Default Route to legacy cerver (/)
##
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: default-routing
  namespace: watch-backend
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: watch-api-mono
      port: 88
  tls:
    domains:                       
      - main: #%DOMAIN_FQN%# #kuber.ivan-b.com
---

#####################################
## Canary deployment watch-api routes
##
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: watch-api-routing
  namespace: watch-backend
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/watch-api`)
    kind: Rule
    services:
    - name: watch-api-wrr
      port: 88
      kind: TraefikService
  tls:
      domains:                       
        - main: #%DOMAIN_FQN%#
---

#####################################
## Direct Route to MONO
##
## Middleware
##
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: micro-redirect
  namespace: watch-backend
spec:
 replacePathRegex:
    regex: ^/micro/(.*)
    replacement: /$1
---

## Route Rule
##
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: watch-api-micro
  namespace: watch-backend
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/micro`)
    kind: Rule
    middlewares:
    - name: micro-redirect
    services:
    - name: watch-api-micro
      port: 88
  tls:
    domains:                       
      - main: #%DOMAIN_FQN%#
---

#####################################
## Direct Route to MONO
##
## Middleware
##
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mono-redirect
  namespace: watch-backend
spec:
 replacePathRegex:
    regex: ^/mono/(.*)
    replacement: /$1
---

## Route
##
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: watch-api-mono
  namespace: watch-backend
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/mono`)
    kind: Rule
    middlewares:
    - name: mono-redirect    
    services:
    - name: watch-api-mono
      port: 88
  tls:
    domains:                       
      - main: #%DOMAIN_FQN%#
