kubernetes/watch-backend/watch-api-routing.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: watch-api-routing
  namespace: watch-backend
spec:
  entryPoints:
    - websecure
  routes:
  - match: PathPrefix(`/`)
    kind: Rule
    services:
    - name: watch-api-wrr
      port: 88
      kind: TraefikService
  tls:
    certResolver: lencrypt
